Action added - All

--- a/ForumApp/ForumApp/ForumApp.csproj
+++ b/ForumApp/ForumApp/ForumApp.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ForumData\ForumData.csproj" />
+    <ProjectReference Include="..\ForumServices\ForumServices.csproj" />
     <ProjectReference Include="..\ForumViewModels\ForumViewModels.csproj" />
   </ItemGroup>
 
