--- a/ForumApp/ForumViewModels/ForumViewModels.csproj
+++ b/ForumApp/ForumViewModels/ForumViewModels.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ForumCommon\ForumCommon.csproj" />
+  </ItemGroup>
+
 </Project>
