--- a/ExamPreparation-Library/Library.Services/Library.Services.csproj
+++ b/ExamPreparation-Library/Library.Services/Library.Services.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.23" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Library.Data\Library.Data.csproj" />
+    <ProjectReference Include="..\Library.ViewModels\Library.ViewModels.csproj" />
+  </ItemGroup>
+
 </Project>
