Creating models and DB

--- a/Homies-ASP.NETFundamentalsExam–17June2023/Homies.Data/Homies.Data.csproj
+++ b/Homies-ASP.NETFundamentalsExam–17June2023/Homies.Data/Homies.Data.csproj
@@ -15,4 +15,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Homies.Common\Homies.Common.csproj" />
+  </ItemGroup>
+
 </Project>
