Create a new event functionality added

--- a/Homies-ASP.NETFundamentalsExam–17June2023/Homies.Services/Homies.Services.csproj
+++ b/Homies-ASP.NETFundamentalsExam–17June2023/Homies.Services/Homies.Services.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Homies.Data\Homies.Data.csproj" />
+    <ProjectReference Include="..\Homies.ViewModels\Homies.ViewModels.csproj" />
+  </ItemGroup>
+
 </Project>
