--- a/Homies-ASP.NETFundamentalsExam–17June2023/Homies.ViewModels/Homies.ViewModels.csproj
+++ b/Homies-ASP.NETFundamentalsExam–17June2023/Homies.ViewModels/Homies.ViewModels.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Homies.Common\Homies.Common.csproj" />
+  </ItemGroup>
+
 </Project>
