--- a/SoftUniBazarWebApp/SoftUniBazar.Data/SoftUniBazar.Data.csproj
+++ b/SoftUniBazarWebApp/SoftUniBazar.Data/SoftUniBazar.Data.csproj
@@ -15,4 +15,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SoftUniBazar.Models\SoftUniBazar.Models.csproj" />
+  </ItemGroup>
+
 </Project>
