--- a/SoftUniBazarWebApp/SoftUniBazar.Services/SoftUniBazar.Services.csproj
+++ b/SoftUniBazarWebApp/SoftUniBazar.Services/SoftUniBazar.Services.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
+    <ProjectReference Include="..\SoftUniBazar.Data\SoftUniBazar.Data.csproj" />
+    <ProjectReference Include="..\SoftUniBazar.ViewModels\SoftUniBazar.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
