Add and Edit functionalities added

--- a/SoftUniBazarWebApp/SoftUniBazar.ViewModels/SoftUniBazar.ViewModels.csproj
+++ b/SoftUniBazarWebApp/SoftUniBazar.ViewModels/SoftUniBazar.ViewModels.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SoftUniBazar.Common\SoftUniBazar.Common.csproj" />
+  </ItemGroup>
+
 </Project>
